# rocket-admin

./: Cargo.toml  Rocket.toml
src/: main.rs
src/config/: log4rs.yaml
src/controller/: error_controller.rs  mod.rs  sys_menu_controller.rs  sys_role_controller.rs  user_controller.rs
src/entity/: mod.rs  sys_captcha.rs  sys_menu.rs  sys_role.rs  sys_user.rs
src/mapper/: mod.rs  sys_captcha_mapper.rs  sys_menu_mapper.rs  sys_role_mapper.rs  user_mapper.rs
src/mapper/xml/: sys_menu_xml.html  sys_role_xml.html  sys_user_xml.html
src/model/: common.rs  disk.rs  mod.rs  my_claims_model.rs  sys_menu_model.rs  user_model.rs
src/service/: mod.rs  sys_captcha_service.rs  sys_menu_service.rs  sys_role_service.rs  user_service.rs
src/util/: auth.rs  captcha.rs  error.rs  mod.rs  res.rs
