[package]
name = "rocket-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
log = "0.4"
log4rs = "1.2.0"
once_cell = "1.16.0"
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rbs = { version = "0.1"}
rbatis = { version = "4.0",features = ["debug_mode"]}
rbdc-mysql = { version="0.1" }
md5 = "0.7.0"
captcha = "0.0.9"